correction du css des cartes hosting + correction css version mobile + ajout border à la nav

--- a/mobile.css
+++ b/mobile.css
@@ -28,8 +28,7 @@ html,body{
 /* HEADER */
 .main_header{
     flex-wrap: wrap;
-    margin: 0;
-    
+    margin: 0;  
 }
 .main_header_logo{
     width: 25%;
@@ -40,10 +39,6 @@ html,body{
     order: 3;
     width: 100%;
     margin-left: unset;
-    
-}
-.main_header_nav_item{
-    border-top: none;
 }
 /* SIGN UP */
 .main_header_sign{
@@ -51,6 +46,19 @@ html,body{
     margin-right: 5%;
     
 }
+.main_header_nav_item{
+    border-bottom: 2px solid #F2F2F2;
+    height: 40px;
+}
+/* CSS ANIMATION */
+.main_header_nav_item:hover{
+    border-top: none;
+    border-bottom: 2px solid #0065fc;
+}
+.main_header_sign:hover{
+    border-top: none;
+}
+/*++++++++++*/
 /* SECTION SEARCH */
 .search{
      margin-left: 5%;
@@ -115,13 +123,10 @@ html,body{
     background-color: #ffffff;
     border-radius: 0;
     width: 100%;
-    
-
 }
 .container_hosting_title{
    margin-right: auto;
    margin-left: 5%;
-
 }
 .container_hosting_cards{
     display: flex;
@@ -134,7 +139,6 @@ html,body{
 }
 .container_hosting_link_card{
     width: 90%;
-    
 }
 .see_more{
     margin-right: auto;
@@ -145,9 +149,8 @@ html,body{
 .container_most_popular{
     height: 590px;
     border-radius: 0;
-    flex: none;
-    
-    
+    flex: none; 
+    width: 100%;
 }
 .container_most_popular_cards{
     height: 455px;
