--- a/style.css
+++ b/style.css
@@ -88,10 +88,10 @@ html,body{
     font-weight: 600;
 }
 /* CSS ANIMATION */
-.main_header_nav_item_hosting:hover{
+.main_header_nav_item:hover{
     border-top: 2px solid #0065fc;
 }
-.main_header_nav_item_activities:hover, .main_header_sign:hover{
+.main_header_sign:hover{
     border-top: 2px solid #0065fc;
 }
 /*++++++++++*/
@@ -119,7 +119,7 @@ html,body{
     align-items: center;
     flex-wrap: nowrap;
     width: 100%;
-    
+    margin-top: 20px;
 }
 
 .search_form_icon{
@@ -176,7 +176,7 @@ html,body{
     justify-content: flex-start;
     align-items: center;
     width: 100%; 
-    margin-top: 3%;
+    margin-top: 30px;
 }
 
 .search_filter_title{
@@ -259,7 +259,7 @@ html,body{
     justify-content: space-between;
     margin-left: 50px;
     margin-right: 50px;
-    width: 100%;
+    width: auto;
 }
 
 /* STYLE OF LINKS SECTION HOSTING/MOST POPULAR */
@@ -273,6 +273,8 @@ html,body{
 
 .container_hosting_info_name h3{
     margin: 5px 0;
+    font-size: 16px;
+    font-weight: 600;
 }
 
 .container_hosting_info_name p{
@@ -284,6 +286,8 @@ html,body{
 .container_most_popular_info_name h3 {
     margin-bottom: 10px;
     margin-top: 10px;
+    font-size: 16px;
+    font-weight: 600;
 }
 
 .container_most_popular_info_name p{
@@ -317,7 +321,6 @@ html,body{
     height: 650px;
     background-color: #F2F2F2;
     border-radius: 20px;
-    /*padding: 0 3%;*/
     flex: 2; 
     margin-right: 5%;
 }
@@ -346,7 +349,6 @@ html,body{
     height: 200px;
     background-color: #ffffff;
     border-radius: 20px;
-    padding: 4px;
     box-shadow: 2px 2px 10px #cecece;
 }
 /* CSS ANIMATION */
@@ -360,13 +362,14 @@ html,body{
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    width: 100%;
-    height: 60.4%;  
+    width: 96.73%;
+    height: 55%;  
+    margin: 4px 4px 0 4px;
 }
 
 .container_hosting_info_name{
     padding-left: 5%;
-    height: auto;
+    height: 40%;
     width: 100%;
 }
 
@@ -413,7 +416,7 @@ html,body{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 90%;
+    width: 345px;
 }
 
 .most_pop_icon{
@@ -426,7 +429,7 @@ html,body{
     flex-direction: column;
     justify-content: space-between;
     height: 76%;
-    width: 90%;
+    width: auto;
 }
 
 .container_most_popular_link-card{
@@ -437,6 +440,7 @@ html,body{
     border-radius: 20px;
     padding: 4px;
     height: 145px;
+    width: 345px/*******/;
     box-shadow: 2px 2px 10px #cecece;
 }
 /* CSS ANIMATION */
@@ -488,6 +492,10 @@ html,body{
     justify-content: space-between;
     align-items: flex-start;
     width: 100%;
+}
+.activities_container h3{
+    font-size: 16px;
+    font-weight: 600;
 }
 
 /* ALL LINKS OF ACTIVITIES */
@@ -656,7 +664,5 @@ html,body{
     text-decoration: none;
     color: #000000;
 }
-.main_footer_container_category h2{
-    /*margin-top: 0;*/
-}
+
 
